--- a/web/src/main/webapp/WEB-INF/templates/home.html
+++ b/web/src/main/webapp/WEB-INF/templates/home.html
@@ -21,7 +21,7 @@
                 <a id="signup" class="btn btn-success btn-lg">Sign up</a>
             </p>
         </div>
-        <div th:insert="~{fragments/footer :: footer}">&copy; 2017 The MKS Group</div>
+        <div th:replace="~{fragments/footer :: footer}">&copy; 2017 The MKS Group</div>
     </div>
 
 </body>
