--- a/web/src/main/webapp/WEB-INF/templates/headerCRMCustomerList.html
+++ b/web/src/main/webapp/WEB-INF/templates/headerCRMCustomerList.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
    <!--  <link rel="stylesheet" href="<c:url value='/assets/css/new_style.css' />"> -->
-    <link rel="stylesheet" type="text/css" href="resources/css/new_style_1.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/new_style.css">
     
     <!-- PHẦN CHỈNH SỬA KHI HỆ THỐNG ASSETS TRÊN INTERNET BỊ LỖI -->
     <!-- ICON -->
@@ -215,10 +215,16 @@
             </li> 
             
             <li class="nav-item d-none d-md-block">
-	            <a class="nav-link nav-link-compress" href="#">
+	            <a class="nav-link nav-link-expand" href="#">
 		            <i class="fa-solid fa-compress"></i>
 	            </a>
             </li> 
+            
+           <!--  <li class="nav-item d-none d-md-block">
+	            <a class="nav-link nav-link-expand" href="#">
+		            <i class="fa-solid fa-compress"></i>
+	            </a>
+            </li>  -->
              
               <li class="nav-item nav-search">
 	              <a class="nav-link nav-link-search" href="#">
