Update 'click and change color' in left menu navigation for Trang chu and Customer successfully!

--- a/web/src/main/webapp/WEB-INF/templates/headerCRMCustomerList.html
+++ b/web/src/main/webapp/WEB-INF/templates/headerCRMCustomerList.html
@@ -361,11 +361,11 @@
 	<div class="main-menu menu-fixed menu-light menu-accordion menu-shadow" data-scroll-to-active="true">
       <div class="main-menu-content ps-container ps-theme-dark ps-active-y" data-ps-id="cbbe64e1-7bf9-4bd7-9765-10b55ff5c397">
         <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
-          <li class="nav-item123 has-sub" data-page="index.html"><a href="index.html"><i class="icon-home"></i><span class="menu-title" data-i18n="nav.dash.main">Trang chủ</span></a>
+          <li class="nav-item123 has-sub" data-page="crm-web/headerCRMCustomerList"><a href="/crm-web/headerCRMCustomerList"><i class="icon-home"></i><span class="menu-title" data-i18n="nav.dash.main">Trang chủ</span></a>
            
           </li>
           
-          <li class="nav-item has-sub" data-page="crm-web/contentCRMCustomerList"><a class="menu-item" href="/crm-web/contentCRMCustomerList"><i class="fa-solid fa-users"></i><span class="menu-title" data-i18n="nav.templates.main">Khách hàng</span></a>
+          <li class="nav-item123 has-sub" data-page="crm-web/contentCRMCustomerList"><a class="menu-item" href="/crm-web/contentCRMCustomerList"><i class="fa-solid fa-users"></i><span class="menu-title" data-i18n="nav.templates.main">Khách hàng</span></a>
            
           </li>
           
