--- a/web/src/main/webapp/resources/css/new_style.css
+++ b/web/src/main/webapp/resources/css/new_style.css
@@ -1,27 +1,12 @@
 @charset "UTF-8";
 
-
-
-.nav-link-expand i.fa-expand:before {
-    font-size:18px;
-    margin-top: 1.5px; /* Điều chỉnh kích thước icon */
-    display: block;
+.main-menu.menu-light .navigation {
+    background: #d5c9eb;
 }
 
-
-
-/* .nav-link-expand i.fa-expand:after {
-    font-size: 18px;
-    margin-top: 1.5px;
-    display: none;
-} */
-
-
-nav-link-expand i.fa-compress:before {
-	font-size: 18px;
-    margin-top: 1.5px;
-    display: none !important;
-} 
+.main-menu.menu-light{
+	background: #d5c9eb;
+}
 
 .logo-company {
 	position: relative;
@@ -45,6 +30,14 @@ nav-link-expand i.fa-compress:before {
 	margin: 0 auto;
 }
 
+.logo-company .name-company{
+	color: #5C6BC0;
+}
+
+a:hover .name-company {
+  color: #1A237E; /* Color change on hover */
+}
+
 .logo-company .name-company::before{
 	content: "";
 	position: absolute;
@@ -54,6 +47,18 @@ nav-link-expand i.fa-compress:before {
 	background-color: #18d26e;
 	bottom: 12px;
 }
+
+.nav-link-expand i.fa-expand:before {
+    font-size:18px;
+    margin-top: 1.5px; /* Điều chỉnh kích thước icon */
+    display: block;
+}
+
+nav-link-expand i.fa-compress:before {
+	font-size: 18px;
+    margin-top: 1.5px;
+    display: none !important;
+} 
 
 .nav-link-search i.fa-magnifying-glass{
 	font-size: 18px;
@@ -76,10 +81,16 @@ nav-link-expand i.fa-compress:before {
 	display: block;
 	text-decoration: none;
 	margin-bottom: 20px;
+	transition: background-color 2s ease, transform 2s ease;
 }
 
 .nav-item123.active a{
-	background-color: #c0c0c0;
-	color: #fff;
+	background-color: #FFD54F;
+	color: black;
+}
+
+.nav-item123.hover a{
+	background-color: #FFECB3;
+	transform: scale(1.1);
 }
 
