--- a/web/src/main/webapp/WEB-INF/templates/homeCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/homeCRMScreen.html
@@ -361,15 +361,15 @@
 	<div class="main-menu menu-fixed menu-light menu-accordion menu-shadow" data-scroll-to-active="true">
       <div class="main-menu-content ps-container ps-theme-dark ps-active-y" data-ps-id="cbbe64e1-7bf9-4bd7-9765-10b55ff5c397">
         <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
-          <li class="nav-item123 has-sub" data-page="crm-web/headerCRMCustomerList"><a href="/crm-web/headerCRMCustomerList"><i class="fa-solid fa-house"></i><span class="menu-title" data-i18n="nav.dash.main">Trang chủ</span></a>
+          <li class="nav-item123 has-sub" data-page="crm-web/homeCRMScreen"><a href="/crm-web/homeCRMScreen"><i class="fa-solid fa-house"></i><span class="menu-title" data-i18n="nav.dash.main">Trang chủ</span></a>
            
           </li>
           
-          <li class="nav-item123 has-sub" data-page="crm-web/contentCRMCustomerList"><a class="menu-item" href="/crm-web/contentCRMCustomerList"><i class="fa-solid fa-users"></i><span class="menu-title" data-i18n="nav.templates.main">Khách hàng</span></a>
+          <li class="nav-item123 has-sub" data-page="crm-web/customerListCRMScreen"><a class="menu-item" href="/crm-web/customerListCRMScreen"><i class="fa-solid fa-users"></i><span class="menu-title" data-i18n="nav.templates.main">Khách hàng</span></a>
            
           </li>
           
-          <li class="nav-item123 has-sub" data-page="crm-web/kpiScreen"><a href="/crm-web/kpiScreen"><i class="fas fa-business-time"></i><span class="menu-title" data-i18n="nav.layouts.temp">KPI</span></a>
+          <li class="nav-item123 has-sub" data-page="crm-web/kpiCRMScreen"><a href="/crm-web/kpiCRMScreen"><i class="fas fa-business-time"></i><span class="menu-title" data-i18n="nav.layouts.temp">KPI</span></a>
             <ul class="menu-content" style="">
               <li class="has-sub"><a class="menu-item" href="#" data-i18n="nav.page_layouts.main">Page layouts</a>
                 <ul class="menu-content">
@@ -548,7 +548,7 @@
               </li>
             </ul>
           </li>
-          <li class="nav-item123 has-sub" data-page="crm-web/workScreen"><a href="/crm-web/workScreen"><i class="fas fa-briefcase"></i><span class="menu-title" data-i18n="nav.category.general">Công việc</span></a>
+          <li class="nav-item123 has-sub" data-page="crm-web/workCRMScreen"><a href="/crm-web/workCRMScreen"><i class="fas fa-briefcase"></i><span class="menu-title" data-i18n="nav.category.general">Công việc</span></a>
             <ul class="menu-content" style="">
               <li class="has-sub"><a class="menu-item" href="#" data-i18n="nav.color_palette.main">Color Palette</a>
                 <ul class="menu-content">
@@ -684,7 +684,7 @@
               </li>
             </ul>
           </li>
-          <li class="nav-item123 has-sub" data-page="crm-web/takeCareCustomerScreen"><a href="/crm-web/takeCareCustomerScreen"><i class="fas fa-phone-volume"></i><span class="menu-title" data-i18n="nav.category.pages">CSKH</span></a>
+          <li class="nav-item123 has-sub" data-page="crm-web/takeCareCustomerCRMScreen"><a href="/crm-web/takeCareCustomerCRMScreen"><i class="fas fa-phone-volume"></i><span class="menu-title" data-i18n="nav.category.pages">CSKH</span></a>
             <ul class="menu-content" style="">
               <li><a class="menu-item" href="email-application.html" data-i18n="nav.email-application.main">Email Application</a>
               </li>
@@ -834,7 +834,7 @@
               </li>
             </ul>
           </li>
-          <li class="nav-item123 has-sub" data-page="crm-web/reportScreen"><a href="/crm-web/reportScreen"><i class="fa-solid fa-file-excel"></i><span class="menu-title" data-i18n="nav.category.ui">Báo cáo</span></a>
+          <li class="nav-item123 has-sub" data-page="crm-web/reportCRMScreen"><a href="/crm-web/reportCRMScreen"><i class="fa-solid fa-file-excel"></i><span class="menu-title" data-i18n="nav.category.ui">Báo cáo</span></a>
             <ul class="menu-content" style="">
               <li class="has-sub"><a class="menu-item" href="#" data-i18n="nav.cards.main">Cards</a>
                 <ul class="menu-content">
