Upgrade source code to Sakai 23.2

--- a/web/src/main/webapp/resources/css/new_style.css
+++ b/web/src/main/webapp/resources/css/new_style.css
@@ -111,7 +111,7 @@
 	width: 100%;
 	text-align: center;
 	padding: 10px;
-	font-weight: bold; /* Làm chữ đậm */
+	font-weight: bold; 
 }
 
 .logo-company img{
