Update filter system: Tick checkbox of searching "Tên người đại diện"

--- a/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
@@ -1102,9 +1102,9 @@
 								            <input id="company-address" class="hidden-select" type="text" placeholder="Tìm kiếm địa chỉ công ty">
 								
 								            <label>
-								                <input type="checkbox" class="filter-option" data-target="#representative-name"> Tên người đại diện
+								                <input type="checkbox" id="filter-option-3" data-target="#representative-name"> Tên người đại diện
 								            </label>
-								            <input id="representative-name" class="hidden" type="text" placeholder="Tìm kiếm tên người đại diện">
+								            <input id="representative-name" class="hidden-select" type="text" placeholder="Tìm kiếm tên người đại diện">
 								
 								            <label>
 								                <input type="checkbox"> Email
