--- a/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
@@ -15,6 +15,12 @@
    <!--  PHẦN BỔ SUNG -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery-resizable-columns@0.2.3/dist/jquery.resizableColumns.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.4/dist/bootstrap-table.min.css">
+  	
    <!--  <link rel="stylesheet" href="<c:url value='/assets/css/new_style.css' />"> -->
     <link rel="stylesheet" type="text/css" href="resources/css/new_style.css">
     <link rel="stylesheet" type="text/css" href="resources/app-assets/css/components_new.min.css">
@@ -1029,7 +1035,9 @@
           <div class="content-header-right col-md-6 col-12">
             <fieldset class="form-group relative has-icon-left col-md-5 col-12 float-right p-0">
               <input class="form-control" id="iconLeft" type="text" placeholder="Tìm kiếm khách hàng..." fdprocessedid="66aqzo">
-              <div class="form-control-position"><i class="fa fa-search"></i></div>
+              <div class="form-control-position">
+              	<i class="fa fa-search"></i>
+              </div>
             </fieldset>
           </div>
         </div>
@@ -1087,90 +1095,159 @@
 		                	</div>
 		                	
 		                	<!-- BEGIN BẢNG DANH SÁCH KHÁCH HÀNG VÀ BỘ LỌC -->
-		                	<div class="column">
-		                		<button id="filter-toggle"><i class="fa-solid fa-filter"></i></button>
+		                	<div class="container-flex">
+		                		<div class="filter-container">
+		                			<button id="filter-toggle"><i class="fa-solid fa-filter"></i></button>
 		                		
-		                		<!-- Khung lọc liên hệ theo, ban đầu ẩn -->
-		                		<div id="filter-box" class="filter-hidden">
-        							<input type="text" placeholder="Tìm kiếm">
-								        <form>
-								            <label>
-								               <input type="checkbox" id="filter-option-1" data-target="#responsible-select"> Người phụ trách 
-								            </label>
-								            <select id="responsible-select" class="hidden-select">
-								                <option value="">Chọn người phụ trách</option>
-								                <option value="1">Lê Ngọc Thạch</option>
-								                <option value="2">Nguyễn Hoàng Phương Ngân</option>
-								                <option value="3">Nguyễn Thế Thành</option>
-								            </select>
-								
-								            <label>
-								                <input type="checkbox" id="filter-option-2" data-target="#company-name, #company-address"> Thông tin công ty
-								            </label>
-								            <input id="company-name" class="hidden-select" type="text" placeholder="Tìm kiếm tên công ty">
-								            <input id="company-address" class="hidden-select" type="text" placeholder="Tìm kiếm địa chỉ công ty">
-								
-								            <label>
-								                <input type="checkbox" id="filter-option-3" data-target="#representative-name"> Tên người đại diện
-								            </label>
-								            <input id="representative-name" class="hidden-select" type="text" placeholder="Tìm kiếm tên người đại diện">
-								
-								            <label>
-								                <input type="checkbox" id="filter-option-4" data-target="#email"> Email công ty
-								            </label>
-								            <input id="email" class="hidden-select" type="text" placeholder="Tìm kiếm email công ty">
-								            
-								            <label>
-								                <input type="checkbox" id="filter-option-5" data-target="phone"> Điện thoại
-								            </label>
-								            <input id="phone" class="hidden-select" type="text" placeholder="Tìm kiếm SĐT công ty">
-								            
-								            
-								            <label>
-								                <input type="checkbox" id="filter-option-6" data-target="status"> Trạng thái
-								            </label>
-								            <select id="main-status-select" class="hidden-select">
-								                <option value="">Chọn trạng thái chính</option>
-								                <option value="1">MỚI</option>
-								                <option value="2">CHƯA BẮT ĐẦU</option>
-								                <option value="3">HOÃN LẠI</option>
-								                <option value="4">ĐANG TRONG TIẾN TRÌNH</option>
-								                <option value="5">HOÀN THÀNH</option>
-								                <option value="6">HỦY</option>
-								                <option value="7">CHỐT</option>
-								                
-								            </select>
-								            
-								            <select id="sub-status-select" class="hidden-select">
-								                <option value="">Chọn trạng thái phụ</option>
-								                <option value="1">Mới cập nhật</option>
-								                <option value="2">Đừng quên</option>
-								            </select>
-								            
-								            
-								            <label>
-								                <input type="checkbox" id="filter-option-7" data-target="time"> Thời gian
-								            </label>
-								            <div id="time-filters" class="hidden-select">
-								            	<span>Thời gian đăng ký</span>
-								                <input type="date" id="register-time" placeholder="Thời gian đăng ký">
-								                								                
-								                <span>Thời gian chốt</span>
-								                <input type="date" id="finalized-time" placeholder="Thời gian chốt">
-								                
-								                <span>Thời gian hủy</span>
-								                <input type="date" id="cancel-time" placeholder="Thời gian hủy">
-								                
-								                <span>Thời gian hoàn thành</span>
-								                <input type="date" id="complete-time" placeholder="Thời gian hoàn thành">
-								            </div>
-								            
-								            
-								            <button>Áp dụng lọc</button>
-								            <button>Xóa bỏ</button>
-								        </form>
-    						</div>
-		                </div>
+		                			<!-- Khung lọc liên hệ theo, ban đầu ẩn -->
+			                		<div id="filter-box" class="filter-hidden">
+			                			<span>Lọc liên hệ theo</span>
+								              <div class="input-with-icon">
+								              	<input class="form-control" id="iconLeft" type="text" placeholder="Tìm kiếm..." fdprocessedid="66aqzo">
+								              	
+									              <div class="icon-container">
+									              	<i class="fa fa-search"></i>
+									              </div>
+								              </div>
+	        							<!-- <input type="text" placeholder="Tìm kiếm..."> -->
+									        <form>
+									            <label>
+									               <input type="checkbox" id="filter-option-1" data-target="#responsible-select"> Người phụ trách 
+									            </label>
+									            <select id="responsible-select" class="hidden-select">
+									                <option value="">Chọn người phụ trách</option>
+									                <option value="1">Lê Ngọc Thạch</option>
+									                <option value="2">Nguyễn Hoàng Phương Ngân</option>
+									                <option value="3">Nguyễn Thế Thành</option>
+									            </select>
+									
+									            <label>
+									                <input type="checkbox" id="filter-option-2" data-target="#company-name, #company-address"> Thông tin công ty
+									            </label>
+									            <input id="company-name" class="hidden-select" type="text" placeholder="Tìm kiếm tên công ty">
+									            <input id="company-address" class="hidden-select" type="text" placeholder="Tìm kiếm địa chỉ công ty">
+									
+									            <label>
+									                <input type="checkbox" id="filter-option-3" data-target="#representative-name"> Tên người đại diện
+									            </label>
+									            <input id="representative-name" class="hidden-select" type="text" placeholder="Tìm kiếm tên người đại diện">
+									
+									            <label>
+									                <input type="checkbox" id="filter-option-4" data-target="#email"> Email công ty
+									            </label>
+									            <input id="email" class="hidden-select" type="text" placeholder="Tìm kiếm email công ty">
+									            
+									            <label>
+									                <input type="checkbox" id="filter-option-5" data-target="phone"> Điện thoại
+									            </label>
+									            <input id="phone" class="hidden-select" type="text" placeholder="Tìm kiếm SĐT công ty">
+									            
+									            
+									            <label>
+									                <input type="checkbox" id="filter-option-6" data-target="status"> Trạng thái
+									            </label>
+									            <select id="main-status-select" class="hidden-select">
+									                <option value="">Chọn trạng thái chính</option>
+									                <option value="1">MỚI</option>
+									                <option value="2">CHƯA BẮT ĐẦU</option>
+									                <option value="3">HOÃN LẠI</option>
+									                <option value="4">ĐANG TRONG TIẾN TRÌNH</option>
+									                <option value="5">HOÀN THÀNH</option>
+									                <option value="6">HỦY</option>
+									                <option value="7">CHỐT</option>
+									                
+									            </select>
+									            
+									            <select id="sub-status-select" class="hidden-select">
+									                <option value="">Chọn trạng thái phụ</option>
+									                <option value="1">Mới cập nhật</option>
+									                <option value="2">Đừng quên</option>
+									            </select>
+									            
+									            
+									            <label>
+									                <input type="checkbox" id="filter-option-7" data-target="time"> Thời gian
+									            </label>
+									            <div id="time-filters" class="hidden-select">
+									            	<span>Thời gian đăng ký</span>
+									                <input type="date" id="register-time" placeholder="Thời gian đăng ký">
+									                								                
+									                <span>Thời gian chốt</span>
+									                <input type="date" id="finalized-time" placeholder="Thời gian chốt">
+									                
+									                <span>Thời gian hủy</span>
+									                <input type="date" id="cancel-time" placeholder="Thời gian hủy">
+									                
+									                <span>Thời gian hoàn thành</span>
+									                <input type="date" id="complete-time" placeholder="Thời gian hoàn thành">
+									            </div>
+									            
+									            
+									            <button>Áp dụng lọc</button>
+									            <button>Xóa bỏ</button>
+									        </form>
+	    								</div>
+		                		</div>
+    						
+    						<!-- BEGIN TABLE CUSTOMER LIST -->
+    							<div class="table-container">
+    								<div class="table-responsive">
+    									<table id="table" 
+    										class="table table-bordered">
+    										<thead>
+										      <tr>
+										        <th width ="2%" data-field="select" class="th1">
+										        	<input type="checkbox" id="select-all" class="d-flex align-items-center justify-content-center"/>
+										        	<!-- <div class="checkbox-table-customer d-flex align-items-center justify-content-center">
+										        		<input type="checkbox" id="select-all"/>
+										        		<label for = "select-all">Select All</label>
+										        	</div> -->
+										        </th>
+										        
+										        <th data-field="firstname" >Logo công ty</th>
+										        <th data-field="lastname" class="th3">Tên công ty</th>
+										        <th data-field="age"  class="th4">Địa chỉ công ty</th>
+										        <th data-field="city" class="th5">Tên người đại diện</th>
+										        <th data-field="country"  class="th6">Email</th>
+										        <th data-field="sex" class="th7">Điện thoại</th>
+										        <th class="th8">Trạng thái chính </th>
+										        <th class="th9">Trạng thái phụ</th>
+										        <th class="th10">Người phụ trách</th>
+										        <th class="th11">Thời gian đăng ký</th>
+										        <th class="th12">Thời gian đăng chốt</th>
+										        <th  class="th13">Thời gian đăng hủy</th>
+										        <th class="th14">Thời gian đăng hoàn thành</th>
+										        <th class="th15">Ghi chú</th>
+										      </tr>
+										    </thead>
+										    <tbody>
+										      <tr>
+										        <td class="">
+										        	<input type="checkbox" name="customer" value="1" />
+										        </td>
+										        
+										        <td class="">image</td>
+										        <td>Công ty A</td>
+										        <td>123 Võ Văn Ngân, TP. Thủ Đức</td>
+										        <td>Nguyễn Văn A</td>
+										        <td>vana.nguyen123@gmail.com</td>
+										        <td>09878655541</td>
+										        <td>CHƯA BẮT ĐẦU</td>
+										        <td>Mới cập nhật</td>
+										        <td>Nguyễn Hoàng Phương Ngân</td>
+										        <td></td>
+										        <td></td>
+										        <td></td>
+										        <td></td>
+										        <td></td>
+										      </tr>
+										    </tbody>
+    									</table>
+    								</div>
+    							</div>
+    						<!-- END TABLE CUSTOMER LIST -->
+    							                	
+		                	</div>
 		                	
 		                	<!-- END BẢNG DANH SÁCH KHÁCH HÀNG VÀ BỘ LỌC -->
 		                	
@@ -1196,12 +1273,34 @@
 	<!-- END CONTENT -->
 	 
 	 
-	 
+
 	 
 	<!-- PHẦN CHỈNH SỬA KHI HỆ THỐNG ASSETS TRÊN INTERNET BỊ LỖI -->
 	<!-- FILE JS BỔ SUNG -->
 	<script type="text/javascript" src="resources/app-assets/js/update/navigate.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+  	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  	
+  	<!-- RESIZABLE -->
+  	<script src="https://cdn.jsdelivr.net/npm/jquery-resizable-columns@0.2.3/dist/jquery.resizableColumns.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.4/dist/bootstrap-table.min.js"></script>
 	
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.4/dist/extensions/resizable/bootstrap-table-resizable.min.js"></script>
+	<!-- <script>
+	    $(document).ready(function () {
+	        // Initialize the table with the resizable extension
+	        $('#table').bootstrapTable({
+	            // Other options can be added here as needed
+	        });
+	
+	        // Enable resizable columns
+	        $('#table').resizableColumns();
+	    });
+	</script> -->
+
+	<!-- RESIZABLE --> 
+	 
 	 <!-- BEGIN VENDOR JS-->
     <script src="resources/app-assets/vendors/js/vendors.min.js"></script>
     <!-- END VENDOR JS-->
